Curve Handles line thickness regression #47582

Closed
opened 2016-02-26 11:33:41 +01:00 by Michael P. · 6 comments

System Information
System: Windows 7 64bit
RAM: 4096 MB
renderer: 'GeForce GTX 760/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.5.0 NVIDIA 353.30'

Blender Version
Broken: blender 2.76.x (0b13989)
Worked: blender 2.76

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
Please see attached animated GIF for more.
curve-handles-line-thickness-regression.gif
linke-thickness-handels.blend

Did not checked other curves (sculpting, animation, etc.) ...

**System Information** System: Windows 7 64bit RAM: 4096 MB renderer: 'GeForce GTX 760/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.5.0 NVIDIA 353.30' **Blender Version** Broken: blender 2.76.x (0b13989) Worked: blender 2.76 **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Please see attached animated GIF for more. ![curve-handles-line-thickness-regression.gif](https://archive.blender.org/developer/F285896/curve-handles-line-thickness-regression.gif) [linke-thickness-handels.blend](https://archive.blender.org/developer/F285895/linke-thickness-handels.blend) Did not checked other curves (sculpting, animation, etc.) ...
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelParucha

Added subscriber: @MichaelParucha

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Campbell Barton was assigned by Bastien Montagne 2016-02-26 17:30:42 +01:00

@ideasman42, you did changes re curves and line thickness iirc?

Here from 2.76 to 2.77, I get slightly thinner curves, and thicker handles, not sure it’s desired or not now. :)

@ideasman42, you did changes re curves and line thickness iirc? Here from 2.76 to 2.77, I get slightly thinner curves, and thicker handles, not sure it’s desired or not now. :)

This issue was referenced by abb3763483

This issue was referenced by abb3763483eaeb7b0a8e16f407f87f80d397c745

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47582
No description provided.