Fix T47582: Curve handle thickness regression